[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.1.3"
futures = "0.3.21"
simple-log = "1.5.1"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
bytes = "1"

[[example]]
name = "testing"
path = "src/examples/testing.rs"
